[project]
name = "chatpdb"
version = "0.1.14"
authors = [
  { name="Caelean Barnes", email="caeleanb@gmail.com" },
  { name="Evan Doyle", email="evanmdoyle@gmail.com" },
]
description = "A chatgpt enabled python debugger"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ['python', 'chatgpt', 'pdb', 'ai', 'chat', 'debugger']
dependencies = [
    "ipdb==0.13.13",
    "openai==1.21.0",
    "pydantic==2.5.3",
    "tenacity==8.2.3",
    "rich==13.7.1"
]
[project.urls]
Homepage = "https://github.com/never-over/chatpdb"
Issues = "https://github.com/never-over/chatpdb/issues"

[tool.pyright]
include = ["chatpdb"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "chatpdb/__main__.py",
    "chatpdb/stdout.py",
    "tests/"
]
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatpdb*"]
namespaces = false
